<resources>
    <string name="app_name">Droidtor</string>
    <string name="str_default_number">0.0</string>
    <string name="str_delete">DEL</string>
    <string name="str_answer">ANSWER</string>
    <string name="str_one">1</string>
    <string name="str_two">2</string>
    <string name="str_there">3</string>
    <string name="str_division">/</string>
    <string name="str_four">4</string>
    <string name="str_five">5</string>
    <string name="str_six">6</string>
    <string name="str_subtraction">-</string>
    <string name="str_seven">7</string>
    <string name="str_eight">8</string>
    <string name="str_nine">9</string>
    <string name="str_multiplication">X</string>
    <string name="str_dot">.</string>
    <string name="str_zero">0</string>
    <string name="str_modulation">%</string>
    <string name="str_addition">+</string>

    <string name="str_kontributor">Kontributor:</string>
    <string name="str_mitra">Kampus Merdeka Hacktiv8</string>
    <string name="str_team_member_2">Team Member 2</string>
    <string name="str_kon1">Amri Marihot Jati</string>
    <string name="str_univ1">STIE Indonesia Banking School</string>
    <string name="str_portofolio1">\@amrimarihotjati</string>
    <string name="str_portofoliourl1">https://github.com/amrimarihotjati</string>
    <string name="str_kon2">Nuryadin Abutani</string>
    <string name="str_univ2">Sekolah Tinggi Teknologi Bandng</string>
    <string name="str_portofolio2">\@nuryadincjr</string>
    <string name="str_portofoliourl2">https://github.com/nuryadincjr</string>
    <string name="support_by_infix_calculator">Support by Infix Calculator</string>
    <string name="about">About</string>

</resources>